Pipeline for ECS

--- a/StagePipeline/Jenkinsfile
+++ b/StagePipeline/Jenkinsfile
@@ -17,6 +17,8 @@ pipeline {
         registryCredential= 'ecr:us-east-1:awscreds'
         appRegistry = '471112739935.dkr.ecr.us-east-1.amazonaws.com/vprofileappimg'
         vprofileRegistry = "https://471112739935.dkr.ecr.us-east-1.amazonaws.com"
+        cluster= "vprostaging1"
+        service = "vproappstagesvc"
     }
 	
     stages{
@@ -136,6 +138,16 @@ pipeline {
               }
             }
           }
+        }
+        stage('Deploy to ECS staging'){
+            steps{
+                withAWS(credentials: 'awscreds', region: 'us-east-1'){
+                    sh 'aws ecs update-service --cluster ${cluster} --service ${service} --force-new-deployment'
+
+                }
+
+            }
+
         }
 
 
